--- a/index.ipynb
+++ b/index.ipynb
@@ -30,8 +30,8 @@
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
     "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
-    "x, y = \n",
-    "print()\n",
+    "x, y = -2, 4\n",
+    "print(y)\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
