--- a/index.ipynb
+++ b/index.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
     "x, y = -2, 4\n",
-    "print(y)\n",
+    "print(y**2 == x**3 \n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
