--- a/index.ipynb
+++ b/index.ipynb
@@ -40,6 +40,10 @@
     "points = ((-2,4), (3,7), (18,77))\n",
     "x, y = -2, 4\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
+    "x, y = -3, 7\n",
+    "print(y**2 == x**3 + 5*x + 7)\n",
+    "x, y = -, 4\n",
+    "print(y**2 == x**3 + 5*x + 7)\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
