--- a/index.ipynb
+++ b/index.ipynb
@@ -22,13 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
+      "False\n",
       "False\n"
      ]
     }
@@ -42,7 +44,7 @@
     "print(y**2 == x**3 + 5*x + 7)\n",
     "x, y = -3, 7\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
-    "x, y = -, 4\n",
+    "x, y = -18, 77\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
