--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,8 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "False\n",
-      "False\n"
+      "True\n",
+      "True\n"
      ]
     }
    ],
@@ -42,9 +42,9 @@
     "points = ((-2,4), (3,7), (18,77))\n",
     "x, y = -2, 4\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
-    "x, y = -3, 7\n",
+    "x, y = 3, 7\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
-    "x, y = -18, 77\n",
+    "x, y = 18, 77\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
