automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,6 +46,7 @@
     "print(y**2 == x**3 + 5*x + 7)\n",
     "x, y = 18, 77\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
+    "for x. y \n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
