--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,8 @@
     "x, y = 18, 77\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
     "for x, y in points:\n",
-    "    if\n",
+    "    if y**2 == x**3 + 5*x + 7\n",
+    "    print('')\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
