--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
     "print(y**2 == x**3 + 5*x + 7)\n",
     "for x, y in points:\n",
     "    if y**2 == x**3 + 5*x + 7\n",
-    "    print('')\n",
+    "    print('({},{} is on the curve'.format)')\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
