automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,16 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n",
-      "True\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-627f007025be>, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-627f007025be>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    if y**2 == x**3 + 5*x + 7\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -50,7 +49,7 @@
     "    if y**2 == x**3 + 5*x + 7\n",
     "    print('({},{} is on the curve'.format(x,y))')\n",
     "    else:\n",
-    "        print()\n",
+    "        print('({},{} is on the curve'.format(x,y))')\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
