automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-627f007025be>, line 12)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-5-0a69247867b7>, line 13)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-627f007025be>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    if y**2 == x**3 + 5*x + 7\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-0a69247867b7>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    print('({},{} is on the curve'.format(x,y))')\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -46,10 +46,10 @@
     "x, y = 18, 77\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
     "for x, y in points:\n",
-    "    if y**2 == x**3 + 5*x + 7\n",
+    "    if y**2 == x**3 + 5*x + 7:\n",
     "    print('({},{} is on the curve'.format(x,y))')\n",
     "    else:\n",
-    "        print('({},{} is on the curve'.format(x,y))')\n",
+    "        print('({},{} is not the curve'.format(x,y))')\n",
     "# for x, y in points:\n",
     "    # determine whether (x,y) is on the curve"
    ]
