automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,15 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-6-1ea332532492>, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-1ea332532492>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    print('({},{} is on the curve'.format(x,y))')\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
@@ -45,13 +46,7 @@
     "print(y**2 == x**3 + 5*x + 7)\n",
     "x, y = 18, 77\n",
     "print(y**2 == x**3 + 5*x + 7)\n",
-    "for x, y in points:\n",
-    "    if y**2 == x**3 + 5*x + 7:\n",
-    "        print('({},{} is on the curve'.format(x,y))')\n",
-    "    else:\n",
-    "        print('({},{} is not the curve'.format(x,y))')\n",
-    "# for x, y in points:\n",
-    "    # determine whether (x,y) is on the curve"
+    "\n"
    ]
   },
   {
