--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,22 @@
     "        # make sure that the elliptic curve equation is satisfied\n",
     "        # y**2 == x**3 + a*x + b\n",
     "        # if not, throw a RuntimeError\n",
-    "        pass"
+    "        pass\n",
+    "     def __init__(self, x, y, a, b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        # x being None and y being None represents the point at infinity\n",
+    "        # Check for that here since the equation below won't make sense\n",
+    "        # with None values for both.\n",
+    "        if self.x is None and self.y is None:\n",
+    "            return\n",
+    "        # make sure that the elliptic curve equation is satisfied\n",
+    "        # y**2 == x**3 + a*x + b\n",
+    "        if self.y**2 != self.x**3 + a*x + b:\n",
+    "        # if not, raise a RuntimeError\n",
+    "            raise RuntimeError('({}, {}) is not on the curve'.format(self.x, self.y))"
    ]
   }
  ],
