--- a/index.ipynb
+++ b/index.ipynb
@@ -22,17 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# (-2,4), (3,7), (18,77)\n",
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
     "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
-    "\n",
-    "# for x, y in points:\n",
-    "    # determine whether (x,y) is on the curve"
+    "x, y = -2, 4\n",
+    "print(y**2 == x**3 + 5*x + 7)\n",
+    "x, y = 3, 7\n",
+    "print(y**2 == x**3 + 5*x + 7)\n",
+    "x, y = 18, 77\n",
+    "print(y**2 == x**3 + 5*x + 7)\n",
+    "\n"
    ]
   },
   {
@@ -44,22 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Point:\n",
-    "\n",
-    "    def __init__(self, x, y, a, b):\n",
+    "     def __init__(self, x, y, a, b):\n",
     "        self.a = a\n",
     "        self.b = b\n",
     "        self.x = x\n",
     "        self.y = y\n",
-    "        # make sure that the elliptic curve equation is satisfied\n",
-    "        # y**2 == x**3 + a*x + b\n",
-    "        # if not, throw a RuntimeError\n",
-    "        pass"
+    "       \n",
+    "        if self.x is None and self.y is None:\n",
+    "            return\n",
+    "       \n",
+    "        if self.y**2 != self.x**3 + a*x + b:\n",
+    "                   raise RuntimeError('({}, {}) is not on the curve'.format(self.x, self.y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -78,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
